--- a/Road to Recovery/pages/rideCandidates.html
+++ b/Road to Recovery/pages/rideCandidates.html
@@ -1566,7 +1566,7 @@
                         deleteBtn = `<button type='button' class='remove btn btn-icon waves-effect waves-light btn-secondary btn-sm m-b-5'id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='מחיקה'><i class='fa fa-remove'></i></button>`;
                         candidateBtn = `<button type='button' class='candidate btn btn-icon waves-effect waves-light btn-secondary btn-sm m-b-5'id='${arr_rides[i].RidePatNum}' name='${arr_rides[i].RidePatNum}' title='הצעת מועמדים'><i class='fa fa-search-minus'></i></button>`;
 
-                        btnStr = `<div class='btnsInSameLine'>${editBtn} ${deleteBtn}${candidateBtn}</div>`;
+                        btnStr = `<div class='elementsInSameLine'>${editBtn} ${deleteBtn}${candidateBtn}</div>`;
                         //#endregion buttons
 
                         thisRidePat = {
