Completed Tomorrows rides

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -840,8 +840,8 @@
                                         <div class="form-group">
                                             <label class="col-sm-2" style="padding: 0.5em 0px;">מתנדב</label>
                                             <div class="col-sm-10" id="selectDriver">
-                                                <input placeholder="מקבל רשימת שמות..." type="text" template_id="select_driver" 
-                                                       class="form-control ui-autocomplete-input" autocomplete="off" 
+                                                <input placeholder="מקבל רשימת שמות..." type="text" template_id="select_driver"
+                                                       class="form-control ui-autocomplete-input" autocomplete="off"
                                                        disabled
                                                        aria-required="true" aria-invalid="false">
                                             </div>
@@ -896,6 +896,20 @@
                                             <label class="col-sm-2" style="padding: 0.5em 0px;">עד תאריך</label>
                                             <div class="col-sm-10">
                                                 <input type="text" template_id="select_date_end" class="form-control" aria-required="true" aria-invalid="false">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row report_template" name="template_DATE_SELECT">
+                            <div class="card-box">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;"> תאריך</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" template_id="select_date" class="form-control" aria-required="true" aria-invalid="false">
                                             </div>
                                         </div>
                                     </div>
