--- a/Road to Recovery/pages/locationForm.html
+++ b/Road to Recovery/pages/locationForm.html
@@ -433,8 +433,9 @@
             </div>
             <!-- end content -->
             <!-- FOOTER -->
-            <footer class="footer text-right">
-                2018 © Road to Recovery Management System by Matan Doron
+            <footer id="rights" data-toggle="tooltip" data-placement="top"
+                    title="© All rights reserved The Road to Recovery.  جميع الحقوق محفوظة لجمعية الطريق الى الشفاء"
+                    class="footer text-right">
             </footer>
             <!-- End FOOTER -->
         </div>
