--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -2073,7 +2073,8 @@
                 var request = {
                     ridePatId: ridePatId,
                     userId: userSelected,
-                    driverType: "primary"
+                    driverType: "primary",
+                    assignedFromAppId: APP_ID
                 };
 
                 var dataString = JSON.stringify(request);
